Reduce compiler to 1.9